Guile-GnuTLS NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bind the AEAD authentication-encryption API and the low-level cipher API.
** Bind a substantial part of the (abstract) public key cryptography API from GnuTLS.

* Noteworthy changes in release 3.7.12 (2023-05-08) [stable]

** The gnutls-guile library can now use newer gnutls features.
It is possible to use newer GnuTLS features, such as new algorithms
and new functions, without sacrificing compatibility with older GnuTLS
implementations. The enumeration values that are not available for the
GnuTLS you build gnutls-guile against will simply be undefined. You
can check whether a function is available with `(defined? 'hmac-copy)`
(here for hmac-copy).

** Bind the HMAC and hash functions from GnuTLS.

** Correctly handle blocking writes to session record ports

* Noteworthy changes in release 3.7.11 (2022-12-07) [stable]

** Build fixes related to git-version-gen.  Fixes: #9.
It is now possible to run 'autoreconf' from within a tarball.

* Noteworthy changes in release 3.7.10 (2022-11-10) [stable]

** Gnulib is used to improve code-reuse and maintainability.
Closes: #1.

** Build fixes wrt static libraries and GNUTLS_CFLAGS.

* Noteworthy changes in release 3.7.9 (2022-10-14) [stable]

** Extracted into a separate project, based on GnuTLS 3.7.8.
For earlier NEWS entries, see upstream NEWS file:
https://gitlab.com/gnutls/gnutls/-/blob/master/NEWS

To reproduce the initial guile-gnutls git repository on which
subsequent commits have been added to, you may use:

```
git clone https://gitlab.com/gnutls/gnutls.git guile-gnutls
cd guile-gnutls/
git checkout f5dcbdb46df52458e3756193c2a23bf558a3ecfd
git-filter-repo --path guile/ --path m4/guile.m4 --path doc/gnutls-guile.texi --path doc/extract-guile-c-doc.scm --path doc/cha-copying.texi --path doc/fdl-1.3.texi
```